<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/hapticTitle"
    />

    <Button android:id="@+id/hapticButton1"
            android:text="@string/hapticButton1Text"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"/>
    <Button android:id="@+id/hapticButton2"
            android:text="@string/hapticButton2Text"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"/>
    <Button android:id="@+id/hapticButton3"
            android:text="@string/hapticButton3Text"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"/>
    <Button android:id="@+id/hapticButton4"
            android:text="@string/hapticButton4Text"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"/>
    <Button android:id="@+id/hapticButton5"
            android:text="@string/hapticButton5Text"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"/>
</LinearLayout>

